fixing year padding

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <input type="number" class="term-input">
         <div class="term-span">years</div>
       </div>
+      
+      <div class="field-label">Interest Rate</div>
+      <div class="rate-field">
+        <input type="number" class="rate-input">
+        <div class="percent-span">%</div>
+      </div>
 
       <div class="field-label">Mortgage Type</div>
       <div class="fancy-radio"></div>
