updated calc button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <label for="interest-only">Interest Only</label>
       </div>
 
-      <button class="calculate-btn">Calculate Repayments</button>
+      <button class="calculate-btn"><img src="./assets/images/icon-calculator.svg" class="calc-icon"><div class="calc-label">Calculate Repayments</div></button>
     </form>
   <div>  
 </div>
